--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "@prisma/studio": "^0.502.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
